[package]
name = "mktorrent-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14" # MIT
stderrlog = "0.5.1" # MIT
walkdir = "2.3.2" # MIT
clap = "3.0.0-beta.2" # MIT
memmap2 = "0.3.0" # MIT
sha-1 = "0.9.6" # MIT
sha2 = "0.9.5" # MIT
crossbeam = "0.8.1" # MIT

[dependencies.indicatif] # MIT
git = 'https://github.com/mitsuhiko/indicatif'
rev = "79ef74a4e9f74c8d135399bd2ebb864c5eb81acd"